Revert "Update header.html"
This reverts commit f3aec5eed32b9873c7adc605d0e2c6e9dc75387f.

--- a/webcomics/templates/components/header.html
+++ b/webcomics/templates/components/header.html
@@ -8,8 +8,8 @@
 
             <!-- LOGO -->
             <a class="navbar-brand" href="/">
-                <img id="Surchaing-logo" src="{% static 'images/logo/logo_v2.png' %}" alt="Moda Gomez" draggable="false"
-                    height="70" />
+                <img id="Surchaing-logo" src="{% static 'images/logo/logo_v2.png' %}" alt="Surchaing Manga"
+                    draggable="false" height="70" />
             </a>
 
             <!-- Menú principal en una sola línea -->
