--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -191,7 +191,7 @@
             <div class="bg-panel"></div>
             <div class="bg-panel"></div>
         </div>
-        <div class="gold-brand">MODA GOMEZ</div>
+        <div class="gold-brand">DERSSG'M</div>
         <div class="concept-container-hero">
             <h1>TUS PRENDAS<br>FAVORITAS YA<br>ESTAN AQUI</h1>
             <p>EXCLUSIVIDAD EN CADA HILO A TUS MANOS...</p>
